Add VM options for Gradle