@@ -50,6 +50,18 @@ configurations.all {
 run {
     main('components.Controller')
     systemProperty('logback.configurationFile', 'src/main/java/components/logger/logback.xml')
+    setApplicationDefaultJvmArgs([
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.net.www.protocol.http=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    ])
 }
 
 // Run this task to rebuild the mapping rule files citygml.json, gml.json and xal.json
